--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   </fieldset>
 
                   <!-- Предварительный просмотр изображения -->
-                  <div class="img-upload__preview-inner">
+                  <div class="img-upload__preview-external">
                     <div class="img-upload__preview">
                       <img src="img/upload-default-image.jpg" alt="Предварительный просмотр фотографии">
                     </div>
@@ -231,6 +231,16 @@
       <div class="success__inner">
         <h2 class="success__title">Изображение успешно загружено</h2>
         <button type="button" class="success__button">Круто!</button>
+      </div>
+    </section>
+  </template>
+
+  <!-- Сообщение с ошибкой загрузки изображений с сайта -->
+  <template id="error_fetch">
+    <section class="error_fetch">
+      <div class="error_fetch__inner">
+        <h2 class="error_fetch__title">Ошибка загрузки файлов</h2>
+        <button type="button" class="error_fetch__button">Перезагрузить страницу</button>
       </div>
     </section>
   </template>
