--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="nouislider/nouislider.css">
   <title>Кекстаграм</title>
-  <script src="pristine/pristine.min.js"></script>
-  <script src="nouislider/nouislider.js"></script>
-  <script type="module" src="js/main.js"></script>
+  <script defer src="pristine/pristine.min.js"></script>
+  <script defer src="nouislider/nouislider.js"></script>
+  <script defer type="module" src="js/main.js"></script>
 </head>
 
 <body>
